--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,35 @@
-.App {
-  text-align: center;
+* {
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+.container {
+  width: 900px;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin: 0 auto;
+  border: 1px solid #000;
+  padding: 2px;
+  display: grid;
+  grid-template-columns: 150px 1fr;
+  grid-template-rows: 120px 1fr auto;
+  grid-gap: 10px;
+  grid-template-areas: 
+  "head head"
+  "navigation main"
+  "footer footer"
+  ;
 }
 
-.App-link {
-  color: #61dafb;
+header {
+  grid-area: head;
+}
+footer{
+  grid-area: footer;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+main{
+  grid-area: main;
+}
+
+nav {
+  grid-area: navigation;
 }
